--- a/style.css
+++ b/style.css
@@ -2,3 +2,12 @@
     background: #ffc107;
     color: rgb(245, 245, 245);
 }
+
+.caixa {
+    padding: 60px 0 60px 0;
+    border-bottom: 1px solid #e5e5e5;
+}
+
+footer p a {
+    margin: 0 15px 0 15px;
+}
